// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageSlider /> should not use a slider for only one image 1`] = `
<ImageSlider
  autoPlay={false}
  className=""
  classNames={Object {}}
  controls={false}
  disabled={false}
  historyPath=""
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={null}
  rebuildOnUpdate={false}
  slidesPerView={1}
  snapItems={true}
>
  <Image
    alt={null}
    animating={true}
    backgroundColor="#f2f2f2"
    className=""
    forcePlaceholder={false}
    highestResolutionLoaded={[Function]}
    key=".0"
    onError={null}
    onLoad={null}
    ratio={null}
    resolutions={
      Array [
        Object {
          "blur": 2,
          "height": 50,
          "width": 50,
        },
        Object {
          "height": 440,
          "width": 440,
        },
      ]
    }
    src={null}
    srcmap={
      Array [
        "foo/bar",
      ]
    }
    transition={null}
  >
    <div
      className="css-1oue43v "
    />
  </Image>
</ImageSlider>
`;

exports[`<ImageSlider /> should wrap each image into a Slider.Item 1`] = `
<Connect(Slider)
  autoPlay={false}
  className=""
  classNames={
    Object {
      "activeIndicator": "css-so6ht",
      "container": "css-nil",
      "inactiveIndicator": "css-1hipsfp",
      "indicator": Object {
        "bullets": "css-dwzljy",
        "fraction": "css-eyy1lx",
      },
      "slide": "css-nil",
      "slider": "css-1i764wo",
    }
  }
  controls={false}
  disabled={false}
  historyPath=""
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={10}
  onSlideChange={null}
  rebuildOnUpdate={false}
  slidesPerView={1}
  snapItems={true}
>
  <SliderItem
    key="0"
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "blur": 2,
            "height": 50,
            "width": 50,
          },
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src={null}
      srcmap={
        Array [
          "foo/bar",
        ]
      }
      transition={null}
    />
  </SliderItem>
  <SliderItem
    key="1"
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "blur": 2,
            "height": 50,
            "width": 50,
          },
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src={null}
      srcmap={
        Array [
          "bar/foo",
        ]
      }
      transition={null}
    />
  </SliderItem>
</Connect(Slider)>
`;
